force-app/main/default/objects/VS_ScenarioItem__c/VS_ScenarioItem__c.object-meta.xml
<CustomObject>
    <description>시나리오를 구성하는 아이템 정보를 관리하는 Obj로 견적모델별 수익성 결과 정보도 관리한다.</description>
    <label>ScenarioItem</label>
    <nameField>
        <displayFormat>SI-{000000000}</displayFormat>
        <label>ScenarioItem Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ScenarioItems</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>