force-app/main/default/objects/VS_ScenarioItem__c/fields/ConversionCost__c.field-meta.xml
<CustomField>
    <fullName>ConversionCost__c</fullName>
    <label>Conversion Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>