force-app/main/default/objects/VS_ScenarioItem__c/fields/Corporate__c.field-meta.xml
<CustomField>
    <fullName>Corporate__c</fullName>
    <label>Corporate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Corporate</valueSetName>
    </valueSet>
</CustomField>