force-app/main/default/objects/VS_ScenarioItem__c/fields/DeltaQuantity__c.field-meta.xml
<CustomField>
    <fullName>DeltaQuantity__c</fullName>
    <label>Delta Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>