force-app/main/default/objects/VS_ScenarioItem__c/fields/DLocation__c.field-meta.xml
<CustomField>
    <fullName>DLocation__c</fullName>
    <label>D Location</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>D_Location</valueSetName>
    </valueSet>
</CustomField>