force-app/main/default/objects/VS_ScenarioItem__c/fields/EOP__c.field-meta.xml
<CustomField>
    <fullName>EOP__c</fullName>
    <description>YYYYMM</description>
    <label>EOP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>