force-app/main/default/objects/VS_ScenarioItem__c/fields/InitialSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>InitialSalesPrice__c</fullName>
    <label>Initial Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>