force-app/main/default/objects/VS_ScenarioItem__c/fields/ItemCode__c.field-meta.xml
<CustomField>
    <fullName>ItemCode__c</fullName>
    <description>수익성 요청 Item Code 정보로 견적모델 + 4가지 옵션 정보로 생성 한다.</description>
    <label>Item Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>