force-app/main/default/objects/VS_ScenarioItem__c/fields/ItemDescription__c.field-meta.xml
<CustomField>
    <fullName>ItemDescription__c</fullName>
    <label>Item Description</label>
    <type>TextArea</type>
</CustomField>