force-app/main/default/objects/VS_ScenarioItem__c/fields/l_Scenario__c.field-meta.xml
<CustomField>
    <fullName>l_Scenario__c</fullName>
    <label>Scenario</label>
    <referenceTo>VS_Scenario__c</referenceTo>
    <relationshipLabel>ScenarioItems</relationshipLabel>
    <relationshipName>ScenarioItems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>