force-app/main/default/objects/VS_ScenarioItem__c/fields/MarginalProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>MarginalProfitAmount__c</fullName>
    <label>Marginal Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>