force-app/main/default/objects/VS_ScenarioItem__c/fields/NetSalesCost__c.field-meta.xml
<CustomField>
    <fullName>NetSalesCost__c</fullName>
    <label>Net Sales Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>