force-app/main/default/objects/VS_ScenarioItem__c/fields/OIAmount__c.field-meta.xml
<CustomField>
    <fullName>OIAmount__c</fullName>
    <label>OI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>