force-app/main/default/objects/VS_ScenarioItem__c/fields/ProductionType__c.field-meta.xml
<CustomField>
    <fullName>ProductionType__c</fullName>
    <label>Production Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Production_Type</valueSetName>
    </valueSet>
</CustomField>