force-app/main/default/objects/VS_ScenarioItem__c/fields/SalesDeductionRate__c.field-meta.xml
<CustomField>
    <fullName>SalesDeductionRate__c</fullName>
    <label>Sales Deduction Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>