force-app/main/default/objects/VS_ScenarioItem__c/fields/SalesQty__c.field-meta.xml
<CustomField>
    <fullName>SalesQty__c</fullName>
    <label>Sales Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>