force-app/main/default/objects/VS_ScenarioItem__c/fields/SNACost__c.field-meta.xml
<CustomField>
    <fullName>SNACost__c</fullName>
    <label>SNA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>