force-app/main/default/objects/VS_ScenarioItem__c/fields/SOP__c.field-meta.xml
<CustomField>
    <fullName>SOP__c</fullName>
    <description>YYYYMM</description>
    <label>SOP</label>
    <length>6</length>
    <type>Text</type>
</CustomField>