force-app/main/default/objects/VS_ScenarioItem__c/fields/USDCOGSCost__c.field-meta.xml
<CustomField>
    <fullName>USDCOGSCost__c</fullName>
    <label>USD COGS Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>