force-app/main/default/objects/VS_ScenarioItem__c/fields/USDConversionCost__c.field-meta.xml
<CustomField>
    <fullName>USDConversionCost__c</fullName>
    <label>USD Conversion Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>