force-app/main/default/objects/VS_ScenarioItem__c/fields/USDMaginalProfitAmount__c.field-meta.xml
<CustomField>
    <fullName>USDMaginalProfitAmount__c</fullName>
    <label>USD Maginal Profit Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>