force-app/main/default/objects/VS_ScenarioItem__c/fields/USDNetSalesCost__c.field-meta.xml
<CustomField>
    <fullName>USDNetSalesCost__c</fullName>
    <label>USD Net Sales Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>