force-app/main/default/objects/VS_ScenarioItem__c/fields/USDOIAmount__c.field-meta.xml
<CustomField>
    <fullName>USDOIAmount__c</fullName>
    <label>USD OI Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>