force-app/main/default/objects/VS_ScenarioItem__c/fields/USDRoyaltyCost__c.field-meta.xml
<CustomField>
    <fullName>USDRoyaltyCost__c</fullName>
    <label>USD Royalty Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>