force-app/main/default/objects/VS_ScenarioItem__c/fields/USDSNACost__c.field-meta.xml
<CustomField>
    <fullName>USDSNACost__c</fullName>
    <label>USD SNA Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>