force-app/main/default/objects/VS_ScenarioItem__c/fields/USDTotalCost__c.field-meta.xml
<CustomField>
    <fullName>USDTotalCost__c</fullName>
    <label>USD Total Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>