force-app/main/default/objects/VS_ScenarioItem__c/fields/VatExclSalesPrice__c.field-meta.xml
<CustomField>
    <fullName>VatExclSalesPrice__c</fullName>
    <label>Vat Excl Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>